# hidratui

./: .gitignore  CMakeLists.txt  README.md
src/: main_tui.cpp
src/core/: machine.cpp  machine.h
src/machines/: rv32immachine.cpp  rv32immachine.h
src/riscv/: CMakeLists.txt  README.md  riscv_alu.cpp  riscv_alu.h  riscv_decoder.cpp  riscv_decoder.h  riscv_example.cpp  riscv_machine.cpp  riscv_machine.h  riscv_register_file.cpp  riscv_register_file.h
src/tests/: CMakeLists.txt
src/tests/rv32imtest/: CMakeLists.txt  tst_rv32im.cpp
src/tests/simulationtests/: CMakeLists.txt
src/tests/simulationtests/RiscV/: CMakeLists.txt  tst_riscv.cpp
src/tui/: file_monitor.cpp  file_monitor.h  layout.cpp  layout.h  machine_config.cpp  machine_config.h  tui_app.cpp  tui_app.h
src/tui/panels/: controls_panel.cpp  controls_panel.h  goto_popup.cpp  goto_popup.h  help_popup.cpp  help_popup.h  memory_panel.cpp  memory_panel.h  output_panel.cpp  output_panel.h  registers_panel.cpp  registers_panel.h
tests/riscv/: CMAKE_GUIDE.md  CMakeLists.txt  ENTREGA.md  EXTENSOES.md  INTEGRACAO.md  REVISAO.md  riscv_tests.cpp
tests/riscv/programs/: cond.s  loop.s  memory.s  soma.s  stack.s
